--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,27 @@ services:
       - .env
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  
+  elasticsearch: # Assuming you also run Elasticsearch via Docker Compose
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.1 # Use a matching version
+    container_name: es01
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false # For easier local dev, secure for production
+    ports:
+      - "9200:9200"
+    volumes:
+      - esdata01:/usr/share/elasticsearch/data
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.5.1 # Use a matching version
+    container_name: kibana01
+    ports:
+      - "5601:5601"
+    environment:
+      ELASTICSEARCH_HOSTS: '["http://es01:9200"]' # Points to your Elasticsearch container
+    depends_on:
+      - elasticsearch
 
 volumes:
   postgres-data:
