--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 
 services:
   fastapi-app:
@@ -11,50 +11,78 @@ services:
     env_file:
       - .env
     depends_on:
-      - redis
-      - db
+      redis:
+        condition: service_healthy
+      db:
+        condition: service_healthy
     volumes:
-      - .:/app
+      - ./:/app
+      - app-data:/app/data
     command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
 
   redis:
-    image: redis:7-alpine
+    image: redis:7.2-alpine
     container_name: redis
     ports:
       - "6379:6379"
-    restart: always
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+    volumes:
+      - redis-data:/data
+    networks:
+      - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
 
   db:
     image: postgres:15-alpine
     container_name: postgres
-    restart: always
+    restart: unless-stopped
     ports:
       - "5432:5432"
     env_file:
       - .env
     volumes:
       - postgres-data:/var/lib/postgresql/data
-  
-  elasticsearch: # Assuming you also run Elasticsearch via Docker Compose
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.1 # Use a matching version
-    container_name: es01
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false # For easier local dev, secure for production
-    ports:
-      - "9200:9200"
-    volumes:
-      - esdata01:/usr/share/elasticsearch/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+    networks:
+      - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
 
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.5.1 # Use a matching version
-    container_name: kibana01
-    ports:
-      - "5601:5601"
-    environment:
-      ELASTICSEARCH_HOSTS: '["http://es01:9200"]' # Points to your Elasticsearch container
-    depends_on:
-      - elasticsearch
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   postgres-data:
+  redis-data:
+  app-data:
