--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,8 @@ uvicorn==0.34.2
 yarl==1.20.0
 asyncpg
 psycopg2-binary
+fastapi
+uvicorn[standard]
+transformers[torch] # Assuming your model is PyTorch based; use [tensorflow] if not
+sentencepiece       # Often required by tokenizers
+# Add any other dependencies your application might have
