--- a/ansible/deploy-fastapi-nginx.yaml
+++ b/ansible/deploy-fastapi-nginx.yaml
@@ -5,24 +5,24 @@
     - name: Apply nginx ConfigMap
       k8s:
         state: present
-        definition: "{{ lookup('file', '../k8s/nginx-configmap.yaml') | from_yaml }}"
+        src: ../k8s/nginx-configmap.yaml
         namespace: default   # ✅ Required
 
     - name: Apply fastapi deployment
       k8s:
         state: present
-        definition: "{{ lookup('file', '../k8s/fastapi-deployment.yaml') | from_yaml }}"
+        src: ../k8s/fastapi-deployment.yaml
         namespace: default
 
     - name: Apply fastapi service
       k8s:
         state: present
-        definition: "{{ lookup('file', '../k8s/fastapi-service.yaml') | from_yaml }}"
+        src: ../k8s/fastapi-service.yaml
         namespace: default
 
 
     - name: Apply nginx deployment and service
       k8s:
         state: present
-        definition: "{{ lookup('file', '../k8s/nginx-deployment.yaml') | from_yaml }}"
+        src: ../k8s/nginx-deployment.yaml
         namespace: default   # ✅ Required
