--- a/ansible/elastic-stack-setup/filebeat-config.yaml
+++ b/ansible/elastic-stack-setup/filebeat-config.yaml
@@ -17,7 +17,7 @@ data:
     output.elasticsearch:
       hosts: ['https://elasticsearch-master.elastic-system.svc.cluster.local:9200']
       username: "elastic"
-      password: "taxoBWZOGPiQedE5"
+      password: "dAW3sQtdXeX4AduS"
       ssl.verification_mode: none
 
     setup.kibana:
