--- a/ansible/elastic-stack-setup/filebeat-values.yaml
+++ b/ansible/elastic-stack-setup/filebeat-values.yaml
@@ -12,7 +12,7 @@ filebeatConfig:
     output.elasticsearch:
       hosts: ['https://elasticsearch-master.elastic-system.svc.cluster.local:9200']
       username: "elastic"
-      password: "taxoBWZOGPiQedE5"
+      password: "dAW3sQtdXeX4AduS"
       ssl.verification_mode: none
 
     setup.kibana:
